<resources>

    <string name="app_name">Posts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_readOk">Leido</string>
    <string name="text_readNo">Sin leer</string>

    <string name="text_splashPosts">Posts</string>

    <string name="text_aboutPosts">Posts</string>
    <string name="text_aboutNotShow">No mostrar de nuevo</string>
    <string name="text_aboutMe">Juan Carlos Martínez Orjuela\n Android dev.</string>

    <string name="text_postDetail_userNickname">Username</string>
    <string name="text_postDetail_userName">Nombre</string>
    <string name="text_postDetail_userEmail">Mail</string>
    <string name="text_postDetail_web">Web</string>
    <string name="text_postDetail_address">Dirección</string>
    <string name="text_postDetail_company">Empresa</string>

    <string name="text_menu_postsAll">Posts</string>
    <string name="text_menu_postsFavorites">Favoritos</string>
    <string name="text_menu_detailPost">Detalle Post</string>
    <string name="text_menu_detailUser">Usuario</string>
    <string name="text_menu_detailComments">Comentarios</string>
    <string name="text_menu_delete">Borrar todo</string>
    <string name="text_menu_about">Acerca de</string>

    <string name="msg_deletePosts">Se han eliminado todos los posts</string>
    <string name="msg_apiLoading">Cargando información</string>
    <string name="msg_apiError">Ha ocurrido un error inesperado</string>

    <string name="lorem_words10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in.</string>
    <string name="lorem_words50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla dui, luctus a
        lorem id, dictum ultrices diam. Fusce fermentum id erat et vehicula. Pellentesque commodo sed purus eget
        dapibus. Vivamus et nisi nulla. Proin pharetra faucibus nisi id tincidunt. Nullam faucibus, lectus non luctus
        iaculis, sapien neque tempus nibh.
    </string>
    <string name="resume_favorites">Favoritos</string>
    <string name="resume_allPosts">Todos los posts</string>
    <string name="resume_msg">Al momento tienes</string>
    <string name="resume_readed">Leidos</string>
    <string name="msgEmptyPosts">No hay posts para mostrar.</string>
    <string name="msgEmptyDeletePosts">No hay nada que puedas eliminar, juega un poco con los posts y vuelve luego.</string>


</resources>
