<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/posts_navigation"
            app:startDestination="@id/splashFragment">
    <fragment
            android:id="@+id/splashFragment"
            android:name="com.gug.example.posts.ui.splash.SplashFragment"
            android:label="fragment_splash"
            tools:layout="@layout/fragment_splash">
        <action
                android:id="@+id/action_to_about"
                app:destination="@id/aboutFragment"
                app:popUpTo="@+id/splashFragment"
                app:popUpToInclusive="true"/>
        <action
                android:id="@+id/action_to_posts"
                app:destination="@id/navigation_posts"
                app:popUpTo="@+id/splashFragment"
                app:popUpToInclusive="true"/>
    </fragment>
    <fragment
            android:id="@+id/aboutFragment"
            android:name="com.gug.example.posts.ui.about.AboutFragment"
            android:label="fragment_about"
            tools:layout="@layout/fragment_about">
        <action
                android:id="@+id/action_to_posts"
                app:destination="@id/navigation_posts"
                app:popUpTo="@+id/aboutFragment"
                app:popUpToInclusive="true"/>
        <argument
                android:name="showOption"
                app:argType="boolean"
                android:defaultValue="true"/>
    </fragment>

    <navigation
            android:id="@+id/navigation_posts"
            app:startDestination="@id/postsAll">
        <fragment
                android:id="@+id/postsAll"
                android:name="com.gug.example.posts.ui.posts.PostsFragment"
                android:label="@string/text_menu_postsAll">
            <argument
                    android:name="showFavorites"
                    app:argType="boolean"
                    android:defaultValue="false"/>
        </fragment>
        <fragment
                android:id="@+id/postsFavorites"
                android:label="@string/text_menu_postsFavorites"
                android:name="com.gug.example.posts.ui.posts.PostsFragment">
            <argument
                    android:name="showFavorites"
                    app:argType="boolean"
                    android:defaultValue="true"/>
        </fragment>
        <fragment
                android:id="@+id/postDetailFragment"
                android:name="com.gug.example.posts.ui.detail.PostDetailFragment"
                android:label="@string/text_menu_detailPost"
                tools:layout="@layout/fragment_post_detail">
            <argument
                    android:name="post"
                    app:argType="com.gug.example.posts.domain.Post"/>
        </fragment>

        <action
                android:id="@+id/action_global_postDetailFragment"
                app:destination="@id/postDetailFragment"/>

        <fragment
                android:id="@+id/deletePosts"
                android:name="com.gug.example.posts.ui.delete.DeletePostsFragment"
                android:label="@string/text_menu_delete"
                tools:layout="@layout/fragment_delete_posts"/>

        <fragment
                android:id="@+id/aboutMeInPosts"
                android:name="com.gug.example.posts.ui.about.AboutFragment"
                android:label="@string/text_menu_about"
                tools:layout="@layout/fragment_about">

            <argument
                    android:name="showOption"
                    app:argType="boolean"
                    android:defaultValue="false"/>

        </fragment>

    </navigation>

    <action
            android:id="@+id/action_global_toPosts"
            app:destination="@id/navigation_posts"
            app:popUpTo="@+id/aboutFragment"
            app:popUpToInclusive="true"/>

</navigation>