<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.about.AboutFragment">

    <data>

        <variable
                name="viewmodel"
                type="com.gug.example.posts.viewmodels.about.AboutViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/text_splashPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

        <TextView
                android:text="@string/text_aboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <ImageView
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:onClick="@{() -> viewmodel.navigateToPosts()}"
                android:tint="@color/secondaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"/>

        <CheckBox
                android:text="@string/text_aboutNotShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notShowAbout_check"
                android:onCheckedChanged="@{(button, bool)-> viewmodel.setShowAbout(bool)}"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>