<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.delete.DeletePostsFragment">

    <data>

        <variable
                name="viewmodel"
                type="com.gug.example.posts.viewmodels.delete.DeletePostsViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:id="@+id/coordinator"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraint"
                app:hideIfZero="@{viewmodel.postsSize}"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

            <TextView
                    android:text="@string/resume_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:text="@string/resume_readed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/readed_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/favorites_text"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintTop_toTopOf="@+id/favorites_text"
                    android:drawableTop="@drawable/ic_label_black_24dp"
                    android:drawableTint="@color/secondaryColor"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/resume_favorites"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/favorites_text"
                    app:layout_constraintStart_toEndOf="@+id/readed_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/posts_text"
                    android:drawableTop="@drawable/ic_favorite_black_24dp"
                    android:drawableTint="@android:color/holo_red_light"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/resume_allPosts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/posts_text"
                    android:drawableTop="@drawable/ic_list_black_24dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toEndOf="@+id/favorites_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favorites_text"/>

            <TextView
                    tools:text="34"
                    android:text="@{viewmodel.favPostsSize}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/favorites_value"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/favorites_text"
                    app:layout_constraintStart_toEndOf="@+id/readed_value"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/posts_value"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                    tools:text="12"
                    android:layout_width="0dp"
                    android:text="@{viewmodel.readedPostsSize}"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/readed_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/favorites_value"
                    app:layout_constraintBottom_toBottomOf="@+id/favorites_value"/>

            <TextView
                    tools:text="100"
                    android:text="@{viewmodel.allPostsSize}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/posts_value"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toEndOf="@+id/favorites_value"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/favorites_value"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/deletemsg_text"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/favorites_value"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:text="¿Estas seguro que deseas eliminar todos los registros de posts?"
                    android:textAlignment="center"/>

            <Button
                    android:text="Borremos todo que iutas ..."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete_button"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/deletemsg_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:elevation="4dp"
                    android:onClick="@{() -> viewmodel.deleteAll()}"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraintEmpty"
                android:visibility="gone"
                app:showIfZero="@{viewmodel.postsSize}"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

            <TextView
                    android:text="@string/msgEmptyDeletePosts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/msgEmpty_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>